# rust-minigame

./: .gitignore  Cargo.toml  README.md
src/: animation.rs  collision.rs  config.rs  constants.rs  controller.rs  entity.rs  events.rs  game.rs  gameloop.rs  macros.rs  main.rs  room.rs
src/reference/: animation.rs
src/rgame/: menu.rs  mod.rs  room.rs
src/traits/: render.rs
src/types/: collision.rs  controller.rs  entity.rs  minimap.rs  misc.rs  mod.rs
