[package]
name = "test1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "*", features = ["image", "ttf"]}
serde_json = "*"
serde = { version = "*", features = ["derive"] }
rand = "*"