[package]
name = "test1"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.1", features = ["image", "ttf"] }
serde_json = "1.0.69"
serde = { version = "1.0.130", features = ["derive"] }
rand = "0.8.4"
